2012-08-11 Maxim
- FIX:UI.Vision: drawing the rect for the centre point of the arc is fixed for the primitive ElFigure.

2012-08-11 Roman
- !:DB.SQLite: For seek to deletion into save context do not set into a transaction, for drop transaction prevent at UI.VCAEngine saving.
    Transaction close after last request is decreased to 60 seconds.
- !!:FIX:Security.User: No reentrant password hash calculation by function crypt() is replaced by reentrant function crypt_r().
- !!:SYS, TValue, UI.VCAEngine: The object TEValObj is added for like to scalar processing for EVAL.
- !:FIX:DAQ.DAQGate: Init reconnect counter set global for flag "call_st".
    Call enable_() for reconnect by reconnect counter zero for prevent empty request at first start and no planed for update parameters present.
- FIX:DAQ.System: HDDTemp source is fixed for no stable and no full requests. Multiple creation and deletion transport is prevented.


2012-08-09 Roman
- FIX:Archive: TVArchive::archivatorAttach() rewrited for new archivators correct attach and set it into "ArchS" config-field.


2012-08-08 Roman
- FIX:UI.Vision: Cursor shape drop to hand is fixed for primitive "Media".


2012-08-07 Roman
- SYS.TVariant: Simple TVarObj object create at request to empty object. At further going to replaced for TEvalObj.


2012-08-04 Roman
- DAQ.Comedi: Asynchronous acquisition is added. Analog inputs A/D conversion settle timeout is added.
- DAQ.ICP_DAS: Acquisition schedule by cron is added. DIO reverse allow is added for DIO144.
- !!:Transport.SSL: Connection procedure into TSocketOut::start() has rewited for use configured timeout for connection.
- UI.VCAEngine: Modify flag clear after on demand loading/enable.


2012-08-01 Roman
- FIX:DAQ.Comedi: Ranges selection into Disable parameter's mode is fixed and tested on PCL-813.


2012-07-31 Roman
- FIX:DB: Into vcaBase.db the button "Play demo" hide for empty demo scenario.
    Into OscadaLibs.db EVAL pass for templates "anUnif" and "anUnifSt" is added.